projects and studies compilation

--- a/Fundamentals-HTML-CSS-JS/PORTFOLIO/index.html
+++ b/Fundamentals-HTML-CSS-JS/PORTFOLIO/index.html
@@ -61,7 +61,11 @@
 					<br /><br />
 					<!-- Button box for call-to-action, downloading a CV -->
 					<div class="btn-box">
-						<a href="#">Download CV</a>
+						<a
+							href="https://github.com/VulpesDevo/resume-cv/blob/main/GALAN%20MARK%20FRANCIS.pdf"
+							target="_blank"
+							>Download CV</a
+						>
 					</div>
 					<!-- Spinning animation container -->
 					<div class="spinning-span-container">
@@ -120,41 +124,33 @@
 				</div>
 				<!-- Container for displaying individual skills and details -->
 				<div class="skills-container">
-					<!-- Box for Web Development skills -->
+					<!-- Box for Programming skills -->
 					<div class="skills-box">
 						<i class="bx bx-code-alt"></i>
-						<h3>Web Development</h3>
+						<h3>Programming</h3>
 						<div class="the-skills">
-							<!-- List of Web Development skills -->
+							<!-- List of Programming skills -->
 							<ul class="field">
-								<li>HTML</li>
-								<li>CSS</li>
-								<li>JavaScript</li>
-							</ul>
-							<!-- Progress bars for skill proficiency -->
-							<ul class="percent">
-								<li class="html"><span></span></li>
-								<li class="css"><span></span></li>
-								<li class="js"><span></span></li>
+								<li>Python</li>
+								<li>Java</li>
+								<li>C#</li>
+								<li>C++</li>
+								<li>Vue.js</li>
+								<li>Django</li>
 							</ul>
 						</div>
 					</div>
-					<!-- Box for Mobile Development skills -->
+					<!-- Box for Database skills -->
 					<div class="skills-box">
-						<i class="bx bx-devices"></i>
-						<h3>Mobile Development</h3>
+						<i class="bx bx-data"></i>
+						<h3>Database</h3>
 						<div class="the-skills">
-							<!-- List of Mobile Development skills -->
+							<!-- List of Database skills -->
 							<ul class="field">
-								<li>Kivy</li>
-								<li>KivyMd</li>
-								<li>Python</li>
-							</ul>
-							<!-- Progress bars for skill proficiency -->
-							<ul class="percent">
-								<li class="kivy"><span></span></li>
-								<li class="kvmd"><span></span></li>
-								<li class="python"><span></span></li>
+								<li>MongoDb</li>
+								<li>Sqlite3</li>
+								<li>AWS</li>
+								<li>MySql</li>
 							</ul>
 						</div>
 					</div>
@@ -165,15 +161,21 @@
 						<div class="the-skills">
 							<!-- List of Other skills -->
 							<ul class="field">
-								<li>Java</li>
-								<li>C#</li>
-								<li>C++</li>
+								<li>Tailwind Css</li>
+								<li>Kivy Framework</li>
+								<li>MS application</li>
 							</ul>
-							<!-- Progress bars for skill proficiency -->
-							<ul class="percent">
-								<li class="java"><span></span></li>
-								<li class="cs"><span></span></li>
-								<li class="cpp"><span></span></li>
+						</div>
+					</div>
+					<!-- Box for Soft skills -->
+					<div class="skills-box">
+						<i class="bx bx-user"></i>
+						<h3>Soft Skills</h3>
+						<div class="the-skills">
+							<!-- List of Soft skills -->
+							<ul class="field">
+								<li>Fast learner</li>
+								<li>Willing to learn from others</li>
 							</ul>
 						</div>
 					</div>
@@ -192,24 +194,6 @@
 					<div class="edu-col">
 						<h3 class="title">EDUCATION</h3>
 						<div class="edu-box">
-							<!-- Educational details for Junior High School -->
-							<div class="edu-content">
-								<div class="content">
-									<div class="year">
-										<i class="bx bx-calendar"></i> 2015-2018
-									</div>
-									<h3>
-										Junior High - Bacoor National High
-										School Salinas Annex
-									</h3>
-									<p>
-										Successfully completed my Junior High
-										School education with dedication and
-										hard work, earning my well-deserved
-										diploma and academic achievements.
-									</p>
-								</div>
-							</div>
 							<!-- Educational details for Senior High School -->
 							<div class="edu-content">
 								<div class="content">
@@ -217,15 +201,13 @@
 										<i class="bx bx-calendar"></i> 2018-2020
 									</div>
 									<h3>
-										Senior High - AMA Computer Learning
-										Center
+										Senior High School - AMA Computer
+										Learning Center
 									</h3>
 									<p>
-										Successfully completed my journey as ABM
-										student with High Honor at ACLC Bacoor
-										Campus, earning my well-deserved
-										accolades and recognition for academic
-										excellence.
+										Graduated with High Honor in
+										Accountancy, Business and Management
+										(ABM) strand.
 									</p>
 								</div>
 							</div>
@@ -233,18 +215,17 @@
 							<div class="edu-content">
 								<div class="content">
 									<div class="year">
-										<i class="bx bx-calendar"></i> 2020-2023
+										<i class="bx bx-calendar"></i>
+										2020-Present
 									</div>
 									<h3>
 										Higher Education - St. Dominic College
 										of Asia
 									</h3>
 									<p>
-										Presently enrolled in the Bachelor of
-										Science in Information Technology
-										program, diligently pursuing my
-										educational and career aspirations in
-										the dynamic field of IT.
+										Currently pursuing my educational and
+										career aspirations in the dynamic field
+										of IT.
 									</p>
 								</div>
 							</div>
@@ -254,54 +235,40 @@
 					<div class="edu-col">
 						<h3 class="title">CERTIFICATION</h3>
 						<div class="edu-box">
-							<!-- Certification details for Hack4Gov Hackathon -->
+							<!-- Certification details for Information Technology Specialist in HTML and CSS -->
 							<div class="edu-content">
 								<div class="content">
 									<div class="year">
-										<i class="bx bx-calendar"></i> 2023
-									</div>
-									<h3>Hack4Gov - Hackathon</h3>
-									<p>
-										Building Cyber Champions: Stronger
-										Nation through Cyber Awareness and
-										Action. - Department of Information and
-										Communication Technology and CERT-PH
-									</p>
-								</div>
-							</div>
-							<!-- Certification details for Readiness to the IT Professional World Seminar -->
-							<div class="edu-content">
-								<div class="content">
-									<div class="year">
-										<i class="bx bx-calendar"></i> 2023
+										<i class="bx bx-calendar"></i> May 2024
 									</div>
 									<h3>
-										Readiness to the IT Professional World
+										Information Technology Specialist in
+										HTML and CSS
 									</h3>
-									<p>
-										E-Certificate of Attendance for the
-										Domini Xode "Readiness to the IT
-										Professional World Seminar.
-									</p>
+									<p>Certified by Certiport.</p>
 								</div>
 							</div>
-							<!-- Certification details for Data Privacy Orientation webinar -->
+							<!-- Certification details for Junior Philippine Computer Society Membership -->
 							<div class="edu-content">
 								<div class="content">
 									<div class="year">
-										<i class="bx bx-calendar"></i> 2022
+										<i class="bx bx-calendar"></i> Academic
+										Year 2023-2024
 									</div>
-									<h3>Data Privacy Orientation</h3>
+									<h3>
+										Junior Philippine Computer Society
+										Membership
+									</h3>
 									<p>
-										E-Certificate of Attendance for the SDCA
-										Data Protection Office's Data Privacy
-										Orientation webinar.
+										Certified member of the Junior
+										Philippine Computer Society.
 									</p>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				<!-- Container for accomplishments -->
 			</section>
 
 			<!-- Projects section, used to showcase a collection of projects I did -->
@@ -310,101 +277,96 @@
 				<h2 class="line-title">My <span>Projects</span></h2>
 				<!-- Container for the project items-->
 				<div class="vibely-modal">
-					<h3>VIBELY</h3>
+					<h3>CULTURALINK</h3>
 					<div class="body-modal">
-						A multifaceted lifestyle and entertainment application
-						that caters to users' diverse interests and preferences,
-						providing a wide range of engaging content, social
-						connectivity, and personalized experiences for a
-						well-rounded digital lifestyle.<br /><br />
-						Beyond content consumption, the app fosters social
-						connectivity. Users can engage with like-minded
-						individuals, join interest-based groups, and participate
-						in lively discussions. Whether you're passionate about
-						eco-conscious living, vintage fashion, or pet care,
-						there's a community waiting to welcome you. Share your
-						experiences, seek advice, and build meaningful
-						connections. From virtual book clubs to live cooking
-						sessions, this app transforms solitary moments into
-						shared experiences.<br /><br />
-						What truly sets this lifestyle app apart is its
-						commitment to personalization. It learns from your
-						interactions, tailoring recommendations based on your
-						preferences. Whether you're planning a weekend getaway,
-						searching for a new workout routine, or curating a
-						playlist for your morning jog, the app seamlessly
-						integrates with your lifestyle. It's not just an app;
-						it's your digital companion—a curator, a confidante, and
-						a catalyst for a well-rounded, fulfilling life.
+						CulturaLink is a groundbreaking digital platform
+						designed to facilitate cultural exchange, bridging the
+						gap between individuals from diverse backgrounds and
+						fostering a vibrant community unlike any other. This
+						innovative platform provides a unique space for people
+						to share their stories, traditions, and experiences,
+						promoting cross-cultural understanding and appreciation.
+						<br /><br />
+						Beyond mere cultural exchange, CulturaLink aims to
+						create a dynamic community where users can engage with
+						one another, learn from each other's perspectives, and
+						develop meaningful connections. Whether you're
+						interested in exploring the rich heritage of a
+						particular region, learning a new language, or simply
+						broadening your cultural horizons, CulturaLink provides
+						the perfect environment to do so.
+						<br /><br />
+						The platform's user-friendly interface and advanced
+						features enable users to create and join cultural
+						groups, participate in lively discussions, and share
+						their experiences through various multimedia formats.
+						From virtual cultural festivals to live language
+						exchange sessions, CulturaLink transforms cultural
+						exploration into an immersive and interactive
+						experience.
+						<br /><br />
+						What sets CulturaLink apart is its commitment to
+						authenticity and inclusivity. The platform celebrates
+						the diversity of cultures from around the world,
+						providing a safe and respectful space for users to
+						express themselves and connect with others. By
+						leveraging cutting-edge technology and a deep
+						understanding of cultural nuances, CulturaLink creates a
+						truly unique and enriching experience for its users.
+						<br /><br />
+						Whether you're a cultural enthusiast, a language
+						learner, or simply someone interested in exploring the
+						rich tapestry of human experience, CulturaLink is the
+						perfect platform for you. Join our vibrant community
+						today and embark on a journey of cultural discovery and
+						connection!
 					</div>
 					<div class="icon-btn" id="vibely-close">
 						<i class="bx bx-x"></i>
 					</div>
 				</div>
 				<div class="bs-modal">
-					<h3>BACKSAFE</h3>
+					<h3>SONYAS</h3>
 					<div class="body-modal">
-						In the Philippines, there's a unique commuter-centric
-						service that's revolutionizing the daily commuting
-						experience. This specialized service is designed to
-						cater to the needs of commuters, with a strong focus on
-						safety and convenience. It's not just about getting from
-						point A to point B; it's about ensuring the well-being
-						of passengers throughout their journey. This innovative
-						approach is changing the way people think about their
-						daily commutes.
+						Sonya's Reservation System is a cutting-edge,
+						user-friendly platform designed to revolutionize the
+						booking experience for hotels and resorts. This
+						innovative system offers guests a seamless and intuitive
+						way to find their ideal accommodations, view real-time
+						room availability, and reserve their stay with ease and
+						convenience.
 						<br /><br />
-						Safety is a top priority for this service, with a range
-						of features and protocols in place to protect
-						passengers. From well-maintained vehicles to trained
-						drivers and stringent safety checks, commuters can rest
-						assured that their well-being is in good hands.
-						Additionally, convenience is at the forefront of this
-						service, with features like real-time tracking, easy
-						booking options, and comfortable, clean vehicles, making
-						the daily grind a little less stressful.
+						By prioritizing simplicity and efficiency, Sonya's
+						Reservation System streamlines the booking process,
+						reducing friction and increasing conversions. The
+						system's advanced features and customizable interface
+						enable hotels and resorts to showcase their unique
+						offerings, provide personalized experiences, and build
+						strong relationships with their guests.
 						<br /><br />
-						For commuters in the Philippines, this specialized
-						service has become a game-changer, providing them with a
-						safer, more convenient, and enjoyable way to navigate
-						their daily journeys. It's a testament to the commitment
-						to passenger well-being, offering a new and improved
-						standard for commuting in the country.
+						With Sonya's Reservation System, guests can effortlessly
+						search and compare rooms, amenities, and rates, making
+						informed decisions about their stay. The system's robust
+						functionality also enables hotels and resorts to manage
+						their inventory, track bookings, and optimize their
+						revenue management strategies.
+						<br /><br />
+						What sets Sonya's Reservation System apart is its
+						commitment to providing a personalized and tailored
+						experience for both guests and hoteliers. By leveraging
+						the latest technology and industry insights, the system
+						creates a win-win scenario, driving revenue growth for
+						hotels and resorts while delivering unparalleled
+						convenience and satisfaction for guests.
+						<br /><br />
+						Whether you're a hotelier looking to enhance your online
+						presence, improve operational efficiency, or increase
+						revenue, or a traveler seeking a hassle-free booking
+						experience, Sonya's Reservation System is the perfect
+						solution. Experience the future of hotel reservations
+						today!
 					</div>
 					<div class="icon-btn" id="bs-close">
-						<i class="bx bx-x"></i>
-					</div>
-				</div>
-				<div class="idris-modal">
-					<h3>IDRIS</h3>
-					<div class="body-modal">
-						Experience a transformative software solution that
-						empowers businesses to take control of their operations.
-						This comprehensive tool is designed to simplify
-						inventory management, enhance sales processes, and
-						streamline overall operations. It's a game-changer for
-						businesses looking to optimize their workflow and
-						maximize efficiency.
-						<br /><br />
-						With this software, tracking inventory becomes a breeze,
-						giving businesses the real-time insights they need to
-						make informed decisions. Sales processes are optimized,
-						resulting in increased revenue and customer
-						satisfaction. Operations are streamlined, reducing
-						overhead costs and boosting productivity. This
-						all-in-one solution is a must-have for any business
-						seeking to stay competitive in today's fast-paced
-						market.
-						<br /><br />
-						For businesses, this software is the key to unlocking
-						their full potential, offering a seamless way to manage
-						inventory, supercharge sales, and operate more
-						efficiently than ever before. It's a powerful tool that
-						transforms the way businesses operate, helping them stay
-						ahead of the competition and thrive in today's business
-						landscape.
-					</div>
-					<div class="icon-btn" id="idris-close">
 						<i class="bx bx-x"></i>
 					</div>
 				</div>
@@ -417,14 +379,14 @@
 						style="background-image: url(./Images/vibely.png)"
 					>
 						<div class="project-box">
-							<h3>VIBELY</h3>
+							<h3>CULTURALINK</h3>
 							<p>
-								A multifaceted lifestyle and entertainment
-								application that caters to users' diverse
-								interests and preferences, providing a wide
-								range of engaging content, social connectivity,
-								and personalized experiences for a well-rounded
-								digital lifestyle.
+								CulturaLink is a capstone project aimed at
+								creating a digital platform for cultural
+								exchange, connecting people from various
+								backgrounds to share stories, traditions, and
+								more, fostering a vibrant community unlike other
+								forums.
 							</p>
 							<!-- Button for external project link -->
 							<div class="icon-btn" id="vibely-btn">
@@ -438,13 +400,15 @@
 						style="background-image: url(./Images/BACKSAFE.png)"
 					>
 						<div class="project-box">
-							<h3>BACKSAFE</h3>
+							<h3>SONYAS</h3>
 							<p>
-								A specialized service tailored for commuters in
-								the Philippines, offering essential safety and
-								convenience features to enhance the daily
-								commuting experience and ensure the well-being
-								of passengers.
+								Sonya's Reservation System is a streamlined,
+								user-friendly platform designed to enhance the
+								booking experience for hotels and resorts. It
+								offers guests a seamless way to find
+								accommodations, view room availability, and
+								reserve their stay with just a few clicks. The
+								system prioritizes convenience,
 							</p>
 							<div class="icon-btn" id="bs-btn">
 								<i class="bx bx-link-external"></i>
@@ -452,7 +416,7 @@
 						</div>
 					</div>
 					<!-- Additional project items with similar structure -->
-					<div
+					<!-- <div
 						class="item"
 						style="
 							background-image: url(./Images/Businesscenter.png);
@@ -470,7 +434,7 @@
 								<i class="bx bx-link-external"></i>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<!-- Additional project items with similar structure -->
 				</div>
 			</section>
@@ -508,17 +472,6 @@
 
 				<!-- Links to social media profiles for connecting -->
 				<div class="soc-med">
-					<a href="https://www.facebook.com/MakKie.F" target="_blank"
-						><i class="bx bxl-facebook-circle"></i
-					></a>
-					<a
-						href="https://www.instagram.com/markieeesss"
-						target="_blank"
-						><i class="bx bxl-instagram"></i
-					></a>
-					<a href="https://www.tiktok.com/@makkie.01" target="_blank"
-						><i class="fa-brands fa-tiktok"></i
-					></a>
 					<a href="https://github.com/VulpesDevo" target="_blank"
 						><i class="bx bxl-github"></i
 					></a>
@@ -543,12 +496,12 @@
 				</p>
 				<p>
 					<a href="mailto:info@test.com" target="_blank"
-						>info@test.com</a
+						>francisgalan21@gmail.com</a
 					>
 				</p>
 				<p>
 					<a href="tel:+63 987 111 1234" target="_blank"
-						>+63 987 111 1234</a
+						>+63 919-641-3263</a
 					>
 				</p>
 				<p>&copy;2023 Copyright; SDCA</p>
