projects and studies compilation

--- a/Fundamentals-HTML-CSS-JS/PORTFOLIO/index.html
+++ b/Fundamentals-HTML-CSS-JS/PORTFOLIO/index.html
@@ -62,7 +62,7 @@
 					<!-- Button box for call-to-action, downloading a CV -->
 					<div class="btn-box">
 						<a
-							href="https://github.com/VulpesDevo/resume-cv/blob/main/GALAN%20MARK%20FRANCIS.pdf"
+							href="https://github.com/VulpesDevo/resume-cv/blob/main/Galan.pdf"
 							target="_blank"
 							>Download CV</a
 						>
